# python-mcp

./: .gitignore  .rules  CHANGELOG.md  README.md  cleaned_path.txt  cleaned_path_drop_html.txt  pyproject.toml  test_env_vars.py  test_mcp_integration.py  test_smart_async.py
docs/: INCREMENTAL_OUTPUT.md  SMART_ASYNC_CONSIDERATION.md  SMART_ASYNC_MIGRATION.md  SMART_ASYNC_SUMMARY.md  SMART_ASYNC_USAGE.md  TEST_RESULTS.md
examples/: README.md  env_vars_demo.py
inline_scripts/: inline_8d6d360788c043f38dce4bbeb071b89b.py  inline_dep_b670902056b6424a9517cb52938d65f1.py  inline_dep_d9272c40db1646d289a24c1693150c14.py  inline_dep_de480581a917400e8067b23ae788675e.py  inline_f01f68c5fea243228c34b0dd590b79c6.py  inline_f65cec7e252a49d59099f04fa40a6f37.py
lex_fridman_transcripts/: README.md
python_mcp_server/: pyproject.toml
python_mcp_server/src/python_mcp_server/: __init__.py
scripts/: .env  check_braces.py  clean_ipynb_outputs.py  count_tokens.py  run_mcp_server.py  scrape_mcpservers.py  smart_async_demo.py  youtube_transcript_downloader.py
src/python_mcp_server/: __init__.py  smart_async.py
