[project]
name = "python-mcp-server"
version = "0.1.0"
description = "MCP server for executing Python scripts with uv-managed environments and dynamic dependency resolution"
readme = "README.md"
authors = [
    { name = "Torstein Sørnes", email = "t.soernes@gmail.com" }
]
requires-python = ">=3.13"
dependencies = ["fastmcp", "psutil", "python-dotenv"]

[project.scripts]
python-mcp-server = "python_mcp_server:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
